--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--COLORES POR DEFECTO-->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +8,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--COLORES DEL PROYECTO-->
+    <color name="morado">#A367C7</color>
+    <color name="naranja">#FF9E4F</color>
+    <color name="gris">#5F5F5F</color>
+    <color name="azul">#87CEEB</color>
 </resources>
