--- a/app/src/main/res/layout/consultar_usuario.xml
+++ b/app/src/main/res/layout/consultar_usuario.xml
@@ -3,39 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteX="1dp"
+    tools:layout_editor_absoluteY="52dp">
 
     <Button
         android:id="@+id/consultarCuentabtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Crear"
+        android:text="@string/consultar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.281"
+        app:layout_constraintHorizontal_bias="0.301"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasena2"
-        app:layout_constraintVertical_bias="0.669" />
+        app:layout_constraintVertical_bias="0.739" />
 
     <EditText
         android:id="@+id/contrasena2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/userCreartxt"
-        tools:layout_editor_absoluteX="169dp" />
+        tools:layout_editor_absoluteX="170dp" />
 
     <EditText
         android:id="@+id/crearNomtxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="176dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.835"
+        app:layout_constraintHorizontal_bias="0.845"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,11 +45,11 @@
         android:id="@+id/userCreartxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/crearNomtxt"
-        tools:layout_editor_absoluteX="169dp" />
+        tools:layout_editor_absoluteX="170dp" />
 
     <EditText
         android:id="@+id/carnettxt"
@@ -56,18 +58,27 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.69"
+        app:layout_constraintHorizontal_bias="0.769"
         app:layout_constraintStart_toEndOf="@+id/carnetlbl"
-        tools:layout_editor_absoluteY="369dp" />
+        tools:layout_editor_absoluteY="105dp" />
+
+    <TextView
+        android:id="@+id/carnetlbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:text="Carnet:"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="105dp" />
 
     <TextView
         android:id="@+id/nomlbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="192dp"
         android:text="Nombre completo:"
         app:layout_constraintEnd_toStartOf="@+id/crearNomtxt"
-        app:layout_constraintHorizontal_bias="0.324"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,10 +86,10 @@
         android:id="@+id/userlbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="76dp"
         android:text="Usuario:"
         app:layout_constraintEnd_toStartOf="@+id/userCreartxt"
-        app:layout_constraintHorizontal_bias="0.238"
+        app:layout_constraintHorizontal_bias="0.243"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomlbl" />
 
@@ -89,10 +100,10 @@
         android:text="Contraseña:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/contrasena2"
-        app:layout_constraintHorizontal_bias="0.17"
+        app:layout_constraintHorizontal_bias="0.178"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userlbl"
-        app:layout_constraintVertical_bias="0.136" />
+        app:layout_constraintVertical_bias="0.145" />
 
     <TextView
         android:id="@+id/tipolbl"
@@ -109,19 +120,10 @@
         android:id="@+id/tipoUsuarioList"
         android:layout_width="211dp"
         android:layout_height="31dp"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasena2" />
-
-    <TextView
-        android:id="@+id/carnetlbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="Carnet:"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="369dp" />
 
     <TextView
         android:id="@+id/fechaRegistrolbl"
@@ -146,7 +148,16 @@
         android:layout_height="wrap_content"
         android:text="LIMPIAR"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toEndOf="@+id/consultarCuentabtn"
-        tools:layout_editor_absoluteY="579dp" />
+        tools:layout_editor_absoluteY="609dp" />
+
+    <TextView
+        android:id="@+id/consultarUserlbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CONSULTAR USUARIO"
+        tools:layout_editor_absoluteX="143dp"
+        tools:layout_editor_absoluteY="44dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
