--- a/app/src/main/res/layout/crear_usuario.xml
+++ b/app/src/main/res/layout/crear_usuario.xml
@@ -102,7 +102,7 @@
         android:text="Tipo de usuario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tipoUsuarioList"
-        app:layout_constraintHorizontal_bias="0.627"
+        app:layout_constraintHorizontal_bias="0.338"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
@@ -148,5 +148,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/consultarCuentabtn"
         tools:layout_editor_absoluteY="579dp" />
+
+    <TextView
+        android:id="@+id/crearUserbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="CREAR USUARIO"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
